--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,14 +13,21 @@
         android:theme="@style/Theme.PractiseLogicalQuestions"
         tools:targetApi="31">
         <activity
-            android:name=".IndexActivity"
+            android:name=".DivisisbleBy15"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
-            android:name=".FormattingPhoneNumber"
+            android:name=".DivisibleBy5"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".IndexActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -28,6 +35,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
 
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".FormattingPhoneNumber"
+            android:exported="true">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
