--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.PractiseLogicalQuestions"
         tools:targetApi="31">
         <activity
-            android:name=".DivisisbleBy15"
+            android:name=".DivisibleBy15"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
